# komplexkanbanv3-team74

./: .gitignore  LICENSE.txt
src/: CMakeLists.txt  a.out  acos.cpp  arg.cpp  arg.h  asin.cpp  atan.cpp  atan.h  build.sh  complex.cpp  complex.h  complex_acos.cpp  complex_acos.h  complex_asin.cpp  complex_asin.h  complex_atan.cpp  complex_atan.h  complex_cos.cpp  complex_cos.h  complex_cosh.cpp  complex_cosh.h  complex_exp.cpp  complex_exp.h  complex_log.cpp  complex_log.h  complex_log10.cpp  complex_log10.h  complex_sqrt.cpp  complex_sqrt.h  conj.cpp  conj.h  cos.cpp  cos.h  cosh.cpp  exp.cpp  imag.cpp  inserter.cpp  log.cpp  log.h  log10.cpp  (+10 more)
src/abs/: abs.cpp  abs.h
src/acos/: acos.cpp  acos.h
src/arg/: arg.cpp
src/asin/: asin.cpp  asin.h
src/atan/: atan.cpp  atan.h
src/conj/: conj.cpp
src/cos/: cos.cpp  cos.h
src/cosh/: cosh.cpp  cosh.h
src/exp/: exp.cpp  exp.h
src/fac/: fac.cpp  fac.h
src/imag/: imag.cpp  imag.h
src/inserter/: inserter.cpp  inserter.h
src/log/: log.cpp  log.h
src/log10/: log10.cpp  log10.h
src/norm/: norm.cpp
src/polar/: polar.cpp  polar.h
src/pow/: pow.cpp
src/real/: real.cpp  real.h
src/sin/: sin.cpp  sin.h
src/sinh/: sinh.cpp  sinh.h
src/sqrt/: sqrt.cpp
src/tan/: tan.cpp  tan.h
src/tanh/: tanh.cpp  tanh.h
tests/: catch_amalgamated.hpp
